<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="date"> </string>
    <string name="temp">Temp </string>
    <string name="minmax"> </string>
    <string name="weather">Weather </string>
    <string name="city">City </string>
    <string name="update">Updating&#8230;</string>
    <string name="load">Loading&#8230;</string>
    <string name="WeatherIcon">WeatherIcon</string>


</resources>
